# obs_optimizer

./: .env.example  .gitignore  .prettierignore  .prettierrc  ACCESSIBILITY_SUMMARY.md  CLAUDE.md  COLOR_GUIDELINES.md  CONTRAST_COMPARISON.md  DARK_MODE_IMPLEMENTATION.md  DARK_MODE_PATTERNS.md  DARK_MODE_SETUP.md  DOCKER_USAGE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TESTING.md  TODO.md  UX_GAP_ANALYSIS.md  WCAG_CONTRAST_FIXES.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  eslint.config.js  obs_guide.md  package.json  pnpm-lock.yaml  requirements_v2.md  session_context_design.md  tailwind.config.js  vitest.config.ts  wireframe_spec.md  youkyuu.md
.claude/skills/frontend-ts/: SKILL.md
.claude/skills/rust-backend/: SKILL.md
contracts/: api.md  events.md  types.md
docs/: FONT_CONFIGURATION.md  FONT_OPTIMIZATION_SUMMARY.md  FONT_QUICK_REFERENCE.md  commander-session-design.md  ui-ux-review-report.md  wireframe_spec_part1.md  wireframe_spec_part2.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: alerts.rs  analyzer.rs  config.rs  export.rs  history.rs  mod.rs  obs.rs  optimization.rs  optimizer.rs  profiles.rs  streaming_mode.rs  system.rs  utils.rs
src-tauri/src/monitor/: gpu.rs  mod.rs  network.rs  process.rs  tests.rs
src-tauri/src/obs/: client.rs  error.rs  events.rs  mod.rs  reconnect.rs  settings.rs  state.rs  types.rs
src-tauri/src/services/: alerts.rs  analyzer.rs  encoder_selector.rs  exporter.rs  gpu_detection.rs  mod.rs  obs.rs  optimizer.rs  static_settings.rs  streaming_mode.rs  system.rs  system_capability.rs
src-tauri/src/storage/: config.rs  credentials.rs  metrics_history.rs  mod.rs  profiles.rs
src-tauri/src/testing/: assertions.rs  builders.rs  fixtures.rs  mod.rs
src-tauri/tests/: analyzer_integration.rs  obs_connection_integration.rs  optimizer_integration.rs
src-tauri/tests/common/: assertions.rs  fixtures.rs  mod.rs
src/components/: EncoderBadge.test.tsx  EncoderBadge.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  Toast.test.tsx  Toast.tsx  ToastContainer.tsx  index.ts
src/components/common/: ConfirmDialog.tsx
src/examples/: FontExample.tsx
src/features/alerts/: AlertHistory.tsx  index.ts
src/hooks/: useTauriCommand.test.ts  useTauriCommand.ts
src/stores/: alertStore.test.ts  alertStore.ts  analysisStore.test.ts  analysisStore.ts  configStore.test.ts  configStore.ts  historyStore.test.ts  historyStore.ts  index.ts  metricsStore.test.ts  metricsStore.ts  obsStore.test.ts  obsStore.ts  onboardingStore.ts  profileStore.test.ts  profileStore.ts  streamingModeStore.test.ts  streamingModeStore.ts  themeStore.test.ts  themeStore.ts
src/tests/: README.md  setup.ts
src/types/: commands.ts  index.ts
src/utils/: encoderLabels.test.ts  encoderLabels.ts  errorTranslation.ts  severity.ts
(+67 files in other folders)
